--- a/app/src/main/res/layout/item_buy_lesson.xml
+++ b/app/src/main/res/layout/item_buy_lesson.xml
@@ -5,8 +5,8 @@
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/margin_10"
     android:background="@color/white"
-    android:paddingTop="@dimen/padding_7"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingTop="@dimen/padding_7">
 
     <ImageView
         android:id="@+id/item_image"
@@ -23,149 +23,170 @@
 
         <TextView
             android:id="@+id/lesson_name"
+            style="@style/textDefault"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="瑜伽课"
-            style="@style/textDefault"
             android:textColor="@color/black"
             android:textSize="@dimen/text_13" />
 
 
         <TextView
-            android:layout_marginTop="@dimen/margin_5"
-            android:gravity="center"
-            android:textColor="@color/blue"
-            android:textSize="@dimen/text_10"
             android:id="@+id/lesson_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/lesson_name"
+            android:layout_marginTop="@dimen/margin_5"
             android:drawableLeft="@drawable/pic_16"
             android:drawablePadding="@dimen/padding_7"
+            android:gravity="center"
             android:text="02：00"
-            android:layout_below="@id/lesson_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_marginTop="@dimen/margin_5"
-            android:gravity="center"
             android:textColor="@color/blue"
-            android:textSize="@dimen/text_10"
-            android:id="@+id/timeLine"
+            android:textSize="@dimen/text_10" />
 
-            android:text=" - "
+        <TextView
+            android:id="@+id/timeLine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@id/lesson_name"
+            android:layout_marginTop="@dimen/margin_5"
+
             android:layout_toRightOf="@id/lesson_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_marginTop="@dimen/margin_5"
             android:gravity="center"
+            android:text=" - "
             android:textColor="@color/blue"
-            android:textSize="@dimen/text_10"
-            android:id="@+id/lesson_end"
-            android:text="03:00"
-            android:layout_below="@id/lesson_name"
-            android:layout_toRightOf="@id/timeLine"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:textSize="@dimen/text_10" />
+
         <TextView
+            android:id="@+id/lesson_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/lesson_name"
             android:layout_marginTop="@dimen/margin_5"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_10"
+            android:layout_toRightOf="@id/timeLine"
+            android:gravity="center"
+            android:text="03:00"
+            android:textColor="@color/blue"
+            android:textSize="@dimen/text_10" />
+
+        <TextView
             android:id="@+id/lesson_addr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/lesson_start"
+            android:layout_marginTop="@dimen/margin_5"
             android:drawableLeft="@drawable/dizhi_bug"
             android:drawablePadding="@dimen/padding_5"
-            android:text="世界大厦101室"
-            android:layout_below="@id/lesson_start"
             android:gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:text="世界大厦101室"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_10" />
+
         <ImageView
             android:id="@+id/delete"
-            android:layout_alignParentRight="true"
-
-            android:src="@drawable/lajixiang"
-            android:layout_marginRight="@dimen/margin_20"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/margin_20"
+            android:src="@drawable/lajixiang" />
+
         <TextView
             android:id="@+id/payState"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@id/lesson_start"
-           android:text="已退款"
-            android:textSize="@dimen/text_10"
-            android:textColor="@color/light_grey"
             android:layout_marginRight="@dimen/margin_20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:text="已退款"
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_10" />
 
     </RelativeLayout>
-<View
-    android:id="@+id/line"
-    android:layout_marginTop="@dimen/margin_10"
-    android:layout_below="@id/item_image"
-   style="@style/verticalLine"/>
+
+    <View
+        android:id="@+id/line"
+        style="@style/verticalLine"
+        android:layout_below="@id/item_image"
+        android:layout_marginTop="@dimen/margin_10" />
+
     <RelativeLayout
-        android:layout_below="@id/line"
+        android:id="@+id/btns"
         android:layout_width="match_parent"
-        android:layout_margin="@dimen/margin_5"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/line"
+        android:layout_margin="@dimen/margin_5">
+
         <TextView
             android:id="@+id/agreeRefund"
             style="@style/textDefault"
-            android:background="@drawable/shape_order_button"
             android:layout_width="@dimen/width_50"
             android:layout_height="wrap_content"
-            android:textColor="@color/light_grey"
-            android:padding="@dimen/padding_5"
-            android:layout_marginLeft="@dimen/margin_5"
-            android:textSize="@dimen/text_10"
             android:layout_alignParentRight="true"
-            android:text="同意退款"/>
+            android:layout_marginLeft="@dimen/margin_5"
+            android:background="@drawable/shape_order_button"
+            android:padding="@dimen/padding_5"
+            android:text="同意退款"
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_10" />
+
         <TextView
             android:id="@+id/course"
             style="@style/textDefault"
-            android:background="@drawable/shape_order_button"
             android:layout_width="@dimen/width_50"
             android:layout_height="wrap_content"
-            android:textColor="@color/light_grey"
-            android:padding="@dimen/padding_5"
             android:layout_alignParentRight="true"
             android:layout_marginLeft="@dimen/margin_5"
-            android:textSize="@dimen/text_10"
-            android:text="评价"/>
+            android:background="@drawable/shape_order_button"
+            android:padding="@dimen/padding_5"
+            android:text="评价"
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_10" />
+
         <TextView
             android:id="@+id/pay"
             style="@style/textDefault"
-            android:background="@drawable/shape_order_button_y"
             android:layout_width="@dimen/width_50"
             android:layout_height="wrap_content"
-            android:textColor="@color/light_yellow"
-            android:padding="@dimen/padding_5"
             android:layout_alignParentRight="true"
             android:layout_marginLeft="@dimen/margin_5"
-            android:textSize="@dimen/text_10"
-            android:text="付款"/>
+            android:background="@drawable/shape_order_button_y"
+            android:padding="@dimen/padding_5"
+            android:text="付款"
+            android:textColor="@color/light_yellow"
+            android:textSize="@dimen/text_10" />
+
         <TextView
-            android:layout_toLeftOf="@id/course"
             android:id="@+id/refund"
             style="@style/textDefault"
-            android:background="@drawable/shape_order_button"
             android:layout_width="@dimen/width_50"
             android:layout_height="wrap_content"
-            android:textColor="@color/light_grey"
+            android:layout_toLeftOf="@id/course"
+            android:background="@drawable/shape_order_button"
             android:padding="@dimen/padding_5"
-            android:textSize="@dimen/text_10"
-            android:text="退款"/>
+            android:text="退款"
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_10" />
+
         <TextView
-            android:layout_toLeftOf="@id/pay"
             android:id="@+id/cancel"
             style="@style/textDefault"
-            android:background="@drawable/shape_order_button"
             android:layout_width="@dimen/width_50"
             android:layout_height="wrap_content"
-            android:textColor="@color/light_grey"
+            android:layout_toLeftOf="@id/pay"
+            android:background="@drawable/shape_order_button"
             android:padding="@dimen/padding_5"
-            android:textSize="@dimen/text_10"
-            android:text="取消"/>
+            android:text="取消"
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_10" />
 
     </RelativeLayout>
+
+    <View
+        style="@style/verticalLine"
+        android:layout_height="@dimen/height_10"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:background="@color/lighter_grey"
+        android:layout_below="@id/btns" />
 </RelativeLayout>
