--- a/app/src/main/res/drawable/ratingbar_small.xml
+++ b/app/src/main/res/drawable/ratingbar_small.xml
@@ -18,7 +18,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+android:id/background"
+        android:id="@android:id/background"
         android:drawable="@drawable/rating_small_empty"/>
     <item
         android:id="@+android:id/secondaryProgress"
