--- a/app/src/main/res/layout/activity_inputcoach.xml
+++ b/app/src/main/res/layout/activity_inputcoach.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cellbg2"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -59,6 +59,7 @@
                         android:text="性别" />
 
                     <RadioGroup
+                        android:id="@+id/gender"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -328,10 +329,38 @@
                     android:textColor="@color/white" />
             </RelativeLayout>
 
-            <FrameLayout
-                android:id="@+id/cert_photos"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="@dimen/height_80"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:layout_margin="@dimen/margin_10"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/cert_image1"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_addimage" />
+                <ImageView
+                    android:id="@+id/cert_image2"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_addimage" />
+                <ImageView
+                    android:id="@+id/cert_image3"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_addimage" />
+                <ImageView
+                    android:id="@+id/cert_image4"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_addimage" />
+            </LinearLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -358,10 +387,38 @@
                     android:textColor="@color/white" />
             </RelativeLayout>
 
-            <FrameLayout
-                android:id="@+id/ward_photos"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="@dimen/height_80"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:layout_margin="@dimen/margin_10"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/ward_image1"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_addimage" />
+                <ImageView
+                    android:id="@+id/ward_image2"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_addimage" />
+                <ImageView
+                    android:id="@+id/ward_image3"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_addimage" />
+                <ImageView
+                    android:id="@+id/ward_image4"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_addimage" />
+            </LinearLayout>
 
         </LinearLayout>
 
