--- a/app/src/main/res/layout/activity_submitorder.xml
+++ b/app/src/main/res/layout/activity_submitorder.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cellbg2"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -10,7 +10,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_35">
+        android:padding="@dimen/padding_10"
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/name"
@@ -34,11 +35,12 @@
             android:textStyle="bold" />
     </RelativeLayout>
 
-    <View style="@style/verticalLine" />
+    <View style="@style/verticalLine" android:background="@color/lighter_grey" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_35">
+        android:padding="@dimen/padding_10"
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="wrap_content"
@@ -51,7 +53,7 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true">
 
             <TextView
@@ -65,7 +67,7 @@
                 android:textSize="@dimen/text_16"
                 android:textStyle="bold" />
 
-            <EditText
+            <TextView
                 android:id="@+id/number"
                 android:layout_width="@dimen/width_30"
                 android:layout_height="wrap_content"
@@ -93,10 +95,11 @@
         </RelativeLayout>
     </RelativeLayout>
 
-    <View style="@style/verticalLine" />
+    <View style="@style/verticalLine" android:background="@color/lighter_grey" />
     <RelativeLayout
+        android:padding="@dimen/padding_10"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_35">
+        android:layout_height="wrap_content">
 
         <TextView
 
@@ -123,10 +126,12 @@
     <View style="@style/verticalLine"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
+android:background="@color/lighter_grey"
         android:layout_height="@dimen/height_10"/>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_35">
+        android:padding="@dimen/padding_10"
+        android:layout_height="wrap_content">
 
         <TextView
 
@@ -158,6 +163,6 @@
         android:layout_marginLeft="@dimen/margin_10"
         android:layout_marginRight="@dimen/margin_10"
         android:layout_width="match_parent"
-        android:text="@string/submit"
+        android:text="@string/submit_order"
         android:layout_height="wrap_content" />
 </LinearLayout>
