--- a/app/src/main/res/layout/fragment_common_list.xml
+++ b/app/src/main/res/layout/fragment_common_list.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical">
 
+<include layout="@layout/include_search" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/lighter_grey" />
     <com.gym.ui.widget.LoadRefreshLayout
         android:id="@+id/swipe"
         android:layout_width="match_parent"
@@ -40,4 +45,4 @@
             android:layout_weight="1"
             android:text="@string/charge" />
     </LinearLayout>
-</FrameLayout>
+</LinearLayout>
