--- a/app/src/main/res/values/netapi.xml
+++ b/app/src/main/res/values/netapi.xml
@@ -1,45 +1,69 @@
 <resources>
-   <!-- 登陆 -->
-   <string name="Login_URL">http://211.149.244.163:8090/LoginService.asmx/Login</string>
-   <!-- 注册 -->
-   <string name="Register_URL">http://211.149.244.163:8090/apphtml/register.html</string>
-   <!-- 注册 -->
-   <string name="ShowAllExerciseRecord_URL">http://211.149.244.163:8090/UserAccount.asmx/ShowAllExerciseRecord</string>
-   <!-- 忘记密码 -->
-   <string name="GetPassword_URL">http://211.149.244.163:8090/apphtml/getpassword.html</string>
-   <!-- 忘记密码 -->
-   <string name="AddExerciseRecord_URL">http://211.149.244.163:8090/UserAccount.asmx/AddExerciseRecord</string>
-   <!-- 购买课程 -->
-   <string name="GetAllOfMyCourse_URL">http://211.149.244.163:8090/JobInfo.asmx/GetAllOfMyCourse</string>
-   <!-- 删除课程 -->
-   <string name="DeleteUserByCourse_URL">http://211.149.244.163:8090/JobInfo.asmx/DeleteUserByCourse</string>
-   <!-- 购买支付课程 -->
-   <string name="BuyCourse_URL">http://211.149.244.163:8090/JobInfo.asmx/BuyCourse</string>
-   <!-- 订单管理 -->
-   <string name="GetOrderByUserID_URL">http://211.149.244.163:8090/JobInfo.asmx/GetOrderByUserID</string>
-   <!-- 编辑用户信息 -->
-   <string name="UpdateUsers_URL">http://211.149.244.163:8090/UserAccount.asmx/UpdateUsers</string>
-   <!-- 用户积分 -->
+    <!-- 登陆 -->
+    <string name="Login_URL">http://211.149.244.163:8090/LoginService.asmx/Login</string>
+    <!-- 注册 -->
+    <string name="Register_URL">http://211.149.244.163:8090/apphtml/register.html</string>
+    <!-- 注册 -->
+    <string name="ShowAllExerciseRecord_URL">http://211.149.244.163:8090/UserAccount.asmx/ShowAllExerciseRecord</string>
+    <!-- 忘记密码 -->
+    <string name="GetPassword_URL">http://211.149.244.163:8090/apphtml/getpassword.html</string>
+    <!-- 忘记密码 -->
+    <string name="AddExerciseRecord_URL">http://211.149.244.163:8090/UserAccount.asmx/AddExerciseRecord</string>
+    <!-- 购买课程 -->
+    <string name="GetAllOfMyCourse_URL">http://211.149.244.163:8090/JobInfo.asmx/GetAllOfMyCourse</string>
+    <!-- 删除课程 -->
+    <string name="DeleteUserByCourse_URL">http://211.149.244.163:8090/JobInfo.asmx/DeleteUserByCourse</string>
+    <!-- 购买支付课程 -->
+    <string name="BuyCourse_URL">http://211.149.244.163:8090/JobInfo.asmx/BuyCourse</string>
+    <!-- 订单管理 -->
+    <string name="GetOrderByUserID_URL">http://211.149.244.163:8090/JobInfo.asmx/GetOrderByUserID</string>
+    <!-- 编辑用户信息 -->
+    <string name="UpdateUsers_URL">http://211.149.244.163:8090/UserAccount.asmx/UpdateUsers</string>
+    <!-- 用户积分 -->
 
-   <string name="GetPersonalIntegration_URL">http://211.149.244.163:8090/Integration.asmx/GetPersonalIntegration</string>
-   <!-- 课程列表 -->
-   <string name="GetJobInfoList_URL">http://211.149.244.163:8090/JobInfo.asmx/GetJobInfoList</string>
-   <!-- 课程列表 -->
-   <string name="UpdateUserforCoach_URL">http://211.149.244.163:8090/UserAccount.asmx/UpdateUserforCoach</string>
-   <!-- 添加教练证书、奖状 -->
-   <string name="AddCoachPhoto_URL">http://211.149.244.163:8090/UserAccount.asmx/AddCoachPhoto</string>
-   <!-- 我的收藏 -->
-   <string name="CollectInfoList_URL">http://211.149.244.163:8090/UserAccount.asmx/CollectInfoList</string>
-   <!-- 删除收藏 -->
-   <string name="DeleteForCollect_URL">http://211.149.244.163:8090/UserAccount.asmx/DeleteForCollect</string>
-   <!-- 添加课程-->
-   <string name="AddNewCourse_URL">http://211.149.244.163:8090/JobInfo.asmx/AddNewCourse</string>
-   <!-- 发布的课程-->
-   <string name="Select_ff_jobinfoByCoachID_URL">http://211.149.244.163:8090/UserAccount.asmx/Select_ff_jobinfoByCoachID</string>
-   <!-- 删除发布的课程-->
-   <string name="DeleteCourseByID_URL">http://211.149.244.163:8090/JobInfo.asmx/DeleteCourseByID</string>
-   <!-- 场地列表-->
-   <string name="GetAllField_URL">http://211.149.244.163:8090/UserAccount.asmx/GetAllField</string>
-   <!-- 场地评分-->
-   <string name="GradeForfitnessfield_URL">http://211.149.244.163:8090/UserAccount.asmx/GradeForfitnessfield</string>
+    <string name="GetPersonalIntegration_URL">http://211.149.244.163:8090/Integration.asmx/GetPersonalIntegration</string>
+    <!-- 课程列表 -->
+    <string name="GetCourseInfoByDistance_URL">http://211.149.244.163:8090/JobInfo.asmx/GetCourseInfoByDistance</string>
+    <!-- 编辑教练信息 -->
+    <string name="UpdateUserforCoach_URL">http://211.149.244.163:8090/UserAccount.asmx/UpdateUserforCoach</string>
+    <!-- 添加教练证书、奖状 -->
+    <string name="AddCoachPhoto_URL">http://211.149.244.163:8090/UserAccount.asmx/AddCoachPhoto</string>
+    <!-- 我的收藏 -->
+    <string name="CollectInfoList_URL">http://211.149.244.163:8090/UserAccount.asmx/CollectInfoList</string>
+    <!-- 删除收藏 -->
+    <string name="DeleteForCollect_URL">http://211.149.244.163:8090/UserAccount.asmx/DeleteForCollect</string>
+    <!-- 添加课程-->
+    <string name="AddNewCourse_URL">http://211.149.244.163:8090/JobInfo.asmx/AddNewCourse</string>
+    <!-- 发布的课程-->
+    <string name="Select_ff_jobinfoByCoachID_URL">http://211.149.244.163:8090/UserAccount.asmx/Select_ff_jobinfoByCoachID</string>
+    <!-- 删除发布的课程-->
+    <string name="DeleteCourseByID_URL">http://211.149.244.163:8090/JobInfo.asmx/DeleteCourseByID</string>
+    <!-- 场地列表-->
+    <string name="GetAllField_URL">http://211.149.244.163:8090/UserAccount.asmx/GetAllField</string>
+    <!-- 场地评分-->
+    <string name="GradeForfitnessfield_URL">http://211.149.244.163:8090/UserAccount.asmx/GradeForfitnessfield</string>
+    <!-- 更新头像-->
+    <string name="UploadPicture_URL">http://211.149.244.163:8090/UserAccount.asmx/UploadPicture</string>
+    <!-- 第三方登陆-->
+    <string name="QQLogin_URL">http://211.149.244.163:8090/loginservice.asmx/QQLogin</string>
+    <!-- 城市列表-->
+    <string name="GetCity_URL">http://211.149.244.163:8090/UserAccount.asmx/GetCity</string>
+    <!-- 教练列表-->
+    <string name="GetCoachInfo_URL">http://211.149.244.163:8090/UserAccount.asmx/GetCoachInfo</string>
+    <!-- 教练详情-->
+    <string name="GetCoachDetail_URL">http://211.149.244.163:8090/UserAccount.asmx/GetCoachDetail</string>
+    <!-- 查看教练证书-->
+    <string name="GetCoachDetail_Photh_Z_URL">http://211.149.244.163:8090/UserAccount.asmx/GetCoachDetail_Photh_Z</string>
+    <!-- 查看教练奖项-->
+    <string name="GetCoachDetail_Photh_J_URL">http://211.149.244.163:8090/UserAccount.asmx/GetCoachDetail_Photh_J</string>
+    <!-- 获取场地-->
+    <string name="GetFFlist_URL">http://211.149.244.163:8090/JobInfo.asmx/GetFFlist</string>
+    <!-- 获取场地详情-->
+    <string name="GetFieldDetail_URL">http://211.149.244.163:8090/Useraccount.asmx/GetFieldDetail</string>
+    <!-- 课程详情-->
+    <string name="GetJobInfoById_URL">http://211.149.244.163:8090/JobInfo.asmx/GetJobInfoById</string>
+    <!-- 课程详情-->
+    <string name="GetCourseComment_URL">http://211.149.244.163:8090/JobInfo.asmx/GetCourseComment</string>
+
+
 </resources>
